--- a/src/components/App.css
+++ b/src/components/App.css
@@ -7,4 +7,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    font-family: sans-serif;
+    font-weight: lighter;
+    font-size: xx-large;
 }
