--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -1,43 +1,22 @@
 .search {
     border: 1px solid lightgray;
     border-radius: 5px;
-    width: 700px;
+    width: 80%;
     padding: 10px;
     margin: 5px;
     box-shadow: 1px 9px 8px -12px rgba(0, 0, 0, 0.75);
-    max-width: 50%;
 }
 
 .btn-search {
     background-color: #0B9568;
     border: #0B9568;
     color: white;
-    width: 100px;
-    padding: 10px;
+    padding: 5px 20px;
     display: inline-block;
-    font-size: 14px;
+    font-size: 16px;
     margin: 5px;
-    margin-bottom: 20px;
     border-radius: 5px;
-    align-self: center;
 }
 
-.btn-switch {
-    background-color: white;
-    border: 2px solid #0B9568;
-
-    color: #0B9568;
-    width: 100px;
-    padding: 10px;
-    display: inline-block;
-    font-size: 14px;
-    margin: 5px;
-    margin-bottom: 20px;
-    border-radius: 5px;
-    align-self: center;
-}
-
-.checkbox-tag {
-    display: inline-block;
-    margin-right: 16px;
+.form {
 }
