--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -11,7 +11,8 @@
     background-color: #0B9568;
     border: #0B9568;
     color: white;
-    padding: 5px 20px;
+    width: 100px;
+    padding: 5px;
     display: inline-block;
     font-size: 16px;
     margin: 5px;
