--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,5 +1,8 @@
 .App {
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .App-header {
