--- a/src/components/TeamItem.css
+++ b/src/components/TeamItem.css
@@ -9,8 +9,7 @@
 .team-item-descr {
     padding-left: 4%;
     padding-right: 4%;
-    text-align: left;
-    display: inline-block;
+    text-align: justify;
 }
 
 .team-item-wiki {
