search bar files get into one, edits on search and filter

--- a/src/components/SearchBar.css
+++ b/src/components/SearchBar.css
@@ -37,7 +37,13 @@
     align-self: center;
 }
 
-.checkbox-tag {
+.radio-tag {
     display: inline-block;
     margin-right: 16px;
 }
+
+.switch-contains {
+    display: inline-block;
+    margin-right: 16px;
+}
+
